--- a/project.config
+++ b/project.config
@@ -1,2 +1,11 @@
 [project]
 	state = active
+[access "refs/heads/*"]
+	create = group D2 Team
+	forgeAuthor = group D2 Team
+	forgeCommitter = group D2 Team
+	push = group D2 Team
+	pushMerge = group D2 Team
+	label-Code-Review = -2..+2 group D2 Team
+	label-Verified = -1..+1 group D2 Team
+	submit = group D2 Team
